// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<div
  className="SlideToggle__root"
>
  <input
    aria-label="Test toggle"
    checked={true}
    className="SlideToggle__input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="SlideToggle__switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="SlideToggle__slideContainer"
    >
      <div
        className="SlideToggle__slider"
      />
      <TickIcon
        className="SlideToggle__slideButton"
        svgClassName="SlideToggle__svg"
      />
    </div>
    <span
      className="SlideToggle__labelText SlideToggle__labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with default props 1`] = `
<div
  className="SlideToggle__root"
>
  <input
    aria-label="Test toggle"
    className="SlideToggle__input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="SlideToggle__switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="SlideToggle__slideContainer"
    >
      <div
        className="SlideToggle__slider"
      />
      <TickIcon
        className="SlideToggle__slideButton"
        svgClassName="SlideToggle__svg"
      />
    </div>
    <span
      className="SlideToggle__labelText SlideToggle__labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<div
  className="SlideToggle__root"
>
  <input
    aria-label="Test toggle"
    className="SlideToggle__input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="SlideToggle__switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="SlideToggle__slideContainer"
    >
      <div
        className="SlideToggle__slider"
      />
      <TickIcon
        className="SlideToggle__slideButton"
        svgClassName="SlideToggle__svg"
      />
    </div>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<div
  className="SlideToggle__root"
>
  <input
    aria-label="Test toggle"
    className="SlideToggle__input SlideToggle__inputLeft"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="SlideToggle__switch"
    htmlFor="testSlideToggle"
  >
    <span
      className="SlideToggle__labelText SlideToggle__labelLeft"
    >
      Test toggle
    </span>
    <div
      className="SlideToggle__slideContainer"
    >
      <div
        className="SlideToggle__slider"
      />
      <TickIcon
        className="SlideToggle__slideButton"
        svgClassName="SlideToggle__svg"
      />
    </div>
  </label>
</div>
`;
